Delay kded module initialization until the plasmoid is fully operational. This make the notification manager catches all notifications.

BUG: 285309
FIXED-IN: 0.9.1_rc1